fix(footer): :lipstick: fix white space in footer

--- a/frontend/src/components/footer/Footer.module.css
+++ b/frontend/src/components/footer/Footer.module.css
@@ -7,7 +7,6 @@
 .footerContainer {
     display: grid;
     grid-template-columns: 1.5fr 1.5fr 1.5fr;
-    padding: 20px 0;
     margin: auto;
     width: 90vw;
 }
@@ -72,8 +71,8 @@
 }
 
 #designedBy {
-    padding: 25px 0;
-    font-size: 14px;
+    padding-bottom: 25px;
+    font-size: 12px;
     font-weight: 200;
     text-align: center;
 }
@@ -83,5 +82,11 @@
         display: flex;
         flex-direction: column-reverse;
         height: auto;
+    }
+    #designedBy {
+        padding: 25px;
+        font-size: 12px;
+        font-weight: 200;
+        text-align: center;
     }
 }
